django-getpaid changes
======================

(master branch - current development)
----------------------
* Adding paymill backend
* PEP 8 improvements
* Adding support for django 1.5 in test project (+ tests)

Version 1.5.1
-------------
* Fixing packaging that causes errors with package installation

Version 1.5.0
-------------
* Adding new backend - Przelewy24.pl (thanks to IssueStand.com funding)
* Fixing packaging package data (now using only MANIFEST.in)

Version 1.4.0
-------------
* Cleaned version 1.3 from minor issues before implementing new backends
* Brazilian backend moip
* Updated PL translation
* Added brazilian portuguese translation
* Storing payment external id and description in the database (warning: database migration needed!)
* Transferuj backend can now predefine interface language when redirecting
* POST method supported on redirect to payment

Version 1.3.0
-------------
* Logotypes support in new payment form
* Fixing packaging

Version 1.2
-----------
* Dotpay backend added
* Hooks for backends to accept email and user name
* Refactoring


Version 1.1
-----------
* PayU backend added
* Lots of documentation
* Refactoring

Version 1.0
-----------
* First stable version