@@ -1,2 +1,0 @@
-#noinspection PyUnresolvedReferences
-from models import register_to_payment
