@@ -1,5 +1,0 @@
-def build_models(payment_class):
-    """
-    Here you can dynamically build a Model class that needs to have ForeignKey to Payment model
-    """
-    return []
