@@ -1,2 +1,1 @@
-def build_models(payment_class):
-    return []
+s
