@@ -1,2 +1,0 @@
-def build_models(payment_class):
-    return []
